fix(MastheadL1): set z-index for selected border

--- a/packages/styles/scss/components/masthead/_masthead.scss
+++ b/packages/styles/scss/components/masthead/_masthead.scss
@@ -318,6 +318,7 @@ $search-transition-timing: 95ms;
         position: absolute;
         box-sizing: border-box;
         bottom: -3px;
+        z-index: 1;
         left: 0;
         right: 0;
         height: rem(3px);
